--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "braintree": "^3.23.0",
+    "braintree-web-drop-in": "^1.42.0",
     "vue": "^3.4.21",
+    "vue-braintree": "^2.1.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
